[package]
name = "libluna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12.1"
